--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.5.0",
     "axios": "^1.10.0",
+    "canvas": "^3.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.6",
+    "konva": "^9.3.22",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-konva": "^19.0.7",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1"
   },
