--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@googlemaps/js-api-loader": "^2.0.1",
+    "@googlemaps/react-wrapper": "^1.2.0",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@stripe/react-stripe-js": "^3.7.0",
