--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.6",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.525.0",
     "next": "^15.5.3",
     "next-themes": "^0.4.6",
